# XFL

embedded-devices/: generate_dataset.py  pyproject.toml
embedded-devices/embeddedexample/: client_app.py  server_app.py  task.py
embeddedexample/: client_app.py  server_app.py  task.py  xfl_strategy.py
