[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embeddedexample"
version = "1.0.0"
description = "Federated AI with Embedded Devices using Flower"
license = "Apache-2.0"
dependencies = [
    "flwr>=1.14.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "xfl @ git+https://gitlab.com/rachid-el-mokadem/xfl.git",  # Add XFL dependency
]

[tool.hatch.build]
exclude = [
    "datasets/*", # Exclude datasets from FAB (if generated in this directory)
    "_static/*", # Exclude images in README from FAB
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "embeddedexample.server_app:app"  # Updated server entry point
clientapp = "embeddedexample.client_app:app"  # Updated client entry point

[tool.flwr.app.config]
num-server-rounds = 5                    # Adjusted for XFL use
fraction-evaluate = 0.5
local-epochs = 10                          # Match the client config
learning-rate = 0.1                     # Match the client config
batch-size = 64

[tool.flwr.federations]
default = "embedded-federation"

[tool.flwr.federations.embedded-federation]
address = "192.168.57.100:9093"
insecure = true